--- a/it4women/exercises/hero-blocks-two.html
+++ b/it4women/exercises/hero-blocks-two.html
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="#hero-two">Hero block: sample seven</a></p>
 		<p><a href="#hero-three">Hero block: sample eight</a></p>
 		<p><a href="#hero-four">Hero block: sample nine</a></p>
-		<p><a href="#upload-github">Uploading your files to GitHub</a></p>
+		<p><a href="#github-upload">Uploading your files to GitHub</a></p>
 		<p><a href="#further-resources">Further resources</a></p>
 	</div>
 </section>
