--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -85,12 +85,50 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Update the background colours of Bootstrap grid elements, and add images to grid rows and columns.</li>
 	</ul>
 
+</section>
 
+<section class="wrapper-content">
+	<div class="box-toc">
+		<h2>Contents</h2>
+		<p><a href="#about-whitespace">About &#8216;whitespace&#8217; in web page layout</a></p>
+		<p><a href="#web-page">Creating your Bootstrap layout web page</a></p>
+		<p><a href="#images">Downloading sample images</a></p>
+		<p><a href="#visual">Adding visual guides to your web page</a></p>
+		<p><a href="#custom-css">Downloading the custom stylesheet</a></p>
+		<p><a href="#link-css">Linking to the custom CSS file</a></p>
+		<p><a href="#col-colours">Adding background colours to grid columns</a></p>
+		<p><a href="#row-colours">Adding background colours to grid rows</a></p>
+		<p><a href="#add-images">Adding images to grid rows and columns</a></p>
+		<p><a href="#upload-github">Uploading your Bootstrap folder to GitHub</a></p>
+		<p><a href="#further-resources">Further resources</a></p>
+	</div>
+</section>
+
+
+<section id="about-whitespace" class="wrapper-content">
+	<h2>About &#8216;whitespace&#8217; in web page layout</h2>
+	<p>The term <i>white space</i> comes from the world of print design where content - text and images - are (mostly) printed on white-coloured paper. White space means space in a design layout that is empty. Although it contains nothing, white space is just as important as any of the content it surrounds for this reason: it makes text more inviting to read.</p>
+
+	<p>Here are some examples of white space in use in print design.</p>
+	<img src="assets/img/intro-bootstrap-practical/white-space-print.jpg" alt="Introduction to HTML">
+	
+	<p>As in print, so too in web design. </p>
+
+
+	<img src="assets/img/intro-bootstrap-practical/white-space-web.jpg" alt="Introduction to HTML">
+
+	<p>Because elecronic screens - and modern printing processes - can create almost any background colour, the original term of white space is increasingly known by the alternative term of <i>negative space</i>.</p>
+
+	<p>In this Tutorial you will use a new stylesheet named <b>.css</b> that adjusts the Bootstrap grid so that it is more suited to creating web page layouts with whitespacing.</p>
+	<p></p>
 </section>
 
 
 <section id="box-about" class="wrapper-content">
-<h2>Creating your Bootstrap layout web page</h2>
+
+
+
+<h2 id="web-page">Creating your Bootstrap layout web page</h2>
 	<p>Let&#8217;s create a Bootstrap-based web page for working with multi-column layout grids. Here are the steps:</p>
 
 	<ol>
@@ -110,7 +148,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="images" class="wrapper-content">
 	<h2>Downloading sample images</h2>
 
 	<p>You will need some sample images to work with. Right-click on the images below, choose <b>Save Image As</b> from the context menu, and download them to your <b>C:/websites/bootstrap/assets/img</b> sub-folder.</p>
@@ -136,7 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="visual" class="wrapper-content">
 	<h2>Adding visual guides to your web page</h2>
 		
 	<p>When creating web pages, designers often add coloured borders to div tags to guide their actions. Let's do this with the new web page you have created.</p>
@@ -161,7 +199,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="custom-css" class="wrapper-content">
 
 	<h2>Downloading the custom stylesheet</h2>
 	<p>Next, we will download a custom stylesheet that adjusts the default Bootstrap grid so that it becomes a more practical starting point for designing modern-looking web pages.</p>
@@ -184,7 +222,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-<section id="box-about" class="wrapper-content">
+<section id="link-css" class="wrapper-content">
 
 	<h2>Linking to the custom CSS file</h2>
 	
@@ -218,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<section id="box-about" class="wrapper-content">
+<section id="col-colours" class="wrapper-content">
 
 	<h2>Adding background colours to grid columns</h2>
 	
@@ -257,7 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="row-colours" class="wrapper-content">
 
 	<h2>Adding background colours to grid rows</h2>
 	<p>Next, let's add a background to an entire horizontal row, so that the background colour covers the full width of the browser screen.</p>
@@ -274,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="box-about" class="wrapper-content">
+<section id="add-images" class="wrapper-content">
 
 	<h2>Adding images to grid rows and columns</h2>
 
