--- a/it4women/exercises/intro-bootstrap-practical.html
+++ b/it4women/exercises/intro-bootstrap-practical.html
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<img src="assets/img/intro-bootstrap-practical/white-space-web.jpg" alt="Introduction to HTML">
 
-	<p>Because elecronic screens - and modern printing processes - can create almost any background colour, the original term of white space is increasingly known by the alternative term of <i>negative space</i>.</p>
+	<p>Because electronic screens - and modern printing processes - can create almost any background colour, the original term of white space is increasingly known by the alternative term of <i>negative space</i>.</p>
 
 	<p>In this Tutorial you will use a new stylesheet named <b>.css</b> that adjusts the Bootstrap grid so that it is more suited to creating web page layouts with whitespacing.</p>
 	<p></p>
