--- a/it4women/exercises/hero-blocks-two.html
+++ b/it4women/exercises/hero-blocks-two.html
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="four-samples">
 		<div>
 			<a href="final-hero/hero-images/after/hero-images.html" target="_blank"><img src="assets/img/hero-blocks/example-two-browser.jpg" alt="Sample image"></a>
-			<a href="final-hero/hero-images/after/hero-images.html" class="link-exercise"  target="_blank">hero-bg-image.html</a>
+			<a href="final-hero/hero-images/after/hero-images.html" class="link-exercise"  target="_blank">hero-images.html</a>
 		</div>
 	</div>
 
