--- a/it4women/exercises/final-hero/hero-video/before/hero-video.html
+++ b/it4women/exercises/final-hero/hero-video/before/hero-video.html
@@ -19,7 +19,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
 
-    <!-- Link to icons for Font Awesome 5 -->;
+    <!-- Link to icons for Font Awesome 5 -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">  
 	
 </head>
