--- a/it4women/exercises/hero-blocks-three.html
+++ b/it4women/exercises/hero-blocks-three.html
@@ -48,25 +48,60 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Learning Goals</h2>
 	<p>At the end of this Tutorial you will be able to:</p>
 	<ul>
-		<li>Add a backgound video to the hero block in a web page.</li>
+		<li>Add a background video with a pre-loading still image to the hero block in a web page.</li>
 	</ul>
+
+	<div class="four-samples">
+		<div>
+			<a href="final-hero/hero-video/after/hero-video.html" target="_blank"><img src="assets/img/hero-blocks/example-three-browser.jpg" alt="Sample image"></a>
+			<a href="final-hero/hero-video/after/hero-video.html" class="link-exercise"  target="_blank">hero-video.html</a>
+		</div>
+	</div>
+
+
 </section>
 
 <section class="wrapper-content bg-white">
 	<div class="box-toc">
 		<h2>Contents</h2>
-		<p><a href="#introduction">Introduction</a></p>
+		<p><a href="#about-video">About hero blocks with background videos</a></p>
 		<p><a href="#project-folder-files">Downloading the sample files</a></p>
 		<p><a href="#background-video">Downloading the background video</a></p>
 		<p><a href="#embed-video">Embedding the video in the HTML page</a></p>
+		<p><a href="#github-upload">Uploading your files to GitHub</a></p>
 	</div>
+
+
+</section>
+
+
+<section id="about-video" class="wrapper-content bg-white">
+
+	<h2>About hero blocks with background videos</h2>
+
+	<p>As Internet connection speeds grow faster and faster, hero blocks and other elements on web pages are increasingly using background videos. Thee are short videos of about 10 seconds that play in a continuous loop.</p>
+	
+	<p>See the examples below.</p>
+
+	<p><a href="https://withgraceandgold.com/about" target="_blank">With Grace and Gold</a></p>
+
+	<p><a href="https://y.co/" target="_blank">The Yacht Company</a></p>
+
+	<p><a href="https://mediaboom.com/" target="_blank">MediaBoom</a></p>
+
+	<p><a href="https://www.dromoland.ie/" target="_blank">Dromoland Castle</a></p>
+
+	<p>Not all users enjoy fast Internet connection speeds, however. So it is good practice to include a background image that displays until the video finishes downloading.</p>
+
+
+
 </section>
 
 
 <section id="sample-files" class="wrapper-content bg-white">
 
 	<h2>Downloading the sample files</h2>
-	<p>In this exercise, you will work with the following two files, a web page and a stylesheet:</p>
+	<p>Your first task is to download the following web page and a stylesheet:</p>
 	
 	<ul>
 		<li><b><a href="final-hero/hero-video/before/hero-video.html" target="_blank">hero-video.html</a></b>: Click this link to open the web page in a new tab of your web browser.
@@ -76,25 +111,51 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>hero-video.html</b>
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to <b>Webpage, HTML only (*.HTML, *.htm)</b>.
-		You can close the browser tab containing the <b>hero-video.html</b> web page.</li>
+		<img src="assets/img/hero-blocks/file-video-save-as-html.png" alt="Working with Internal Hyperlinks">
+
+		You can close the browser tab containing the <b>hero-video.html</b> web page.
+		<span class="inside-ol">&nbsp;</span>
+		Your <b>websites/bootstrap</b> sub-folder shown now look as shown below.
+		<img src="assets/img/hero-blocks/file-explorer-video-html.png" alt="Working with Internal Hyperlinks"></li>
 
 		<li><b><a href="final-hero/hero-video/before/assets/css/hero-video.css" target="_blank">hero-video.css</a></b>: Click this link to open the stylesheet file in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
 		Right-click anywhere in the browser window, and from the context menu, choose <b>Save as... (Chrome)</b> or <b>Save Page As...</b> (Firefox).
 		<span class="inside-ol">&nbsp;</span>
-		Save the <b>hero-basic.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.
+		Save the <b>hero-video.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to the correct file type.
 		<span class="inside-ol">&nbsp;</span>
+		Your <b>websites/bootstrap/assets/css</b> sub-folder shown now look as shown below.
+		<img src="assets/img/hero-blocks/file-explorer-video-css.png" alt="Working with Internal Hyperlinks"></li>
 		You can close the browser tab containing the <b>hero-video.css</b> stylesheet.</li>
 	</ul>
 
 	<p>You have now saved the two files you need for this exercise.</p>
 
-	<p>Next, in your <b>bootstrap/assets</b> sub-folder, create a new sub-folder named <b>videos</b>.</p>
+	<p>Next, in your <b>bootstrap/assets</b> sub-folder, create a new sub-folder named <b>videos</b>.
+
+	<img src="assets/img/hero-blocks/file-explorer-video-folder.png" alt="Working with Internal Hyperlinks">
+
+	<p>You will use this <b>videos</b> sub-folder to store the video you will download later in this exercise.</p>
 </section>
 
+<section id="sample-files" class="wrapper-content bg-white">
 
+	<h2>Downloading your sample poster image</h2>
+
+	<p>Next you will download a background image - called a <i>poster</i> - that will display until the video is ready to play and it has finished downloading.</p>
+	
+	<p>Right-click on the images below, choose <b>Save Image As</b> from the context menu, and download them to your <b>C:/websites/bootstrap/assets/img</b> sub-folder.
+
+	<img src="final-hero/hero-video/before/assets/img/hero-still.jpg" style="max-width: 300px; height: auto; margin-bottom:12px" alt="sample image">
+	<a href="final-hero/hero-video/before/assets/img/hero-still.jpg" target="_blank">Link</a>
+
+	
+	</div><!-- End parent flexbox container -->
+	
+
+</section>
 
 <section id="background-video" class="wrapper-content">
 
@@ -202,14 +263,56 @@ This allows you to include a tinted overlay, if required, to make the text conte
 
 	<p>In your web browser, reload and view your <b>hero-video.html</b> web page on desktop/laptop and mobile screens. The background video should play continuously.</p>
 
-	<p>That&#8217;s it. You have now completed this exercise.</p>
+	<p>That&#8217;s it. You have now completed this Tutorial.</p>
 
+	<p>Success!. You have now completed this Tutorial.</p>
 
-	<p><br><br>Return to <a href="../../index.html">Contents</a>.</p>
+	<p>You can see an example of the finished web page at the link below.</p>
+
+	<a href="final-hero/hero-video/after/hero-video.html" target="_blank">hero-video.html</a>
+
 
 
 </section>
 
+
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your Bootstrap folder to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> Bootstrap folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-bootstrap/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-bootstrap/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/intro-bootstrap/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/intro-bootstrap/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b>bootstrap</b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded web page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/bootstrap/hero-video.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
