--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -46,11 +46,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Learning Goals</h2>
 	<p>At the end of this Tutorial you will be able to:</p>
 	<ul>
-		<li>Style the layout and appearance of four hero sections in a sample web page.</li>
-		<li>Add background images to the hero blocks.</li>
-		<li>Add a shadow effect to the hero text.</li>
-		<li>Add a tinted overlay behind the hero text and in front of the background image.</li>
-		<li>Add different background images for desktop/laptop and mobile screens.</li>
+		<li>Update a basic email contact form, styled with Bootstrap, to use the online form procesing service from Formspree.</li>
 	</ul>
 
 
