--- a/it4women/index.html
+++ b/it4women/index.html
@@ -329,8 +329,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-practical.html">View Tutorial<i class="fas fa-arrow-right"></i></a>
 		</div>
 
+	</div><!--- /flex-grid -->
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-form.html">
+				<img src="assets/img/toc-bs-form.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-form.html">Bootstrap Contact Form</a></h3>
+			<p>Update a basic email contact form, styled with Bootstrap, to use the online form procesing service from Formspree.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-form.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
+
+		<div class="item-3">&nbsp;</div>
+
+		<div class="item-3">&nbsp;</div>
 
 	</div><!--- /flex-grid -->
+
+
 </section>
 
 
