--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>You have now saved the two files you need for this exercise.</p>
 
-	<p>There are no sample images to downoad for this Tutorial.</p>
+	<p>There are no sample images to download for this Tutorial.</p>
 </section>
 
 
