--- a/it4women/index.html
+++ b/it4women/index.html
@@ -342,7 +342,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-form.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
 		</div>
 
-		<div class="item-3">&nbsp;</div>
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-privacy.html">
+				<img src="assets/img/toc-bs-cookie.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-privacy.html">Bootstrap Privacy Page</a></h3>
+			<p>Download a privacy template web page and create a 'pop-up' cookie consent message to include in your web pages.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-privacy.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		
+		
+		
+		
+		</div>
 
 		<div class="item-3">&nbsp;</div>
 
