--- a/it4women/index.html
+++ b/it4women/index.html
@@ -80,7 +80,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p>The SureSkills Trainer Evaluation Form is here: <a href="https://www.surveymonkey.com/r/SureSkillsEvaluationForm" target="_blank"><b>here</b></a>.</p>
 	</div>
 
-
 </section>
 </section>
 
@@ -330,7 +329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 
 	</div><!--- /flex-grid -->
-
+	<p>&nbsp;</p>
 	<div class="flex-grid">
 
 		<div class="item-3">
@@ -349,13 +348,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<h3><a href="exercises/intro-bootstrap-privacy.html">Bootstrap Privacy Page</a></h3>
 			<p>Download a privacy template web page and create a 'pop-up' cookie consent message to include in your web pages.</p>
 			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-privacy.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
-		
-		
-		
-		
 		</div>
 
-		<div class="item-3">&nbsp;</div>
+		<div class="item-3">
+			<a href="exercises/intro-bootstrap-menu-footer.html">
+				<img src="assets/img/toc-bs-menu.png" class="img-shadow" alt="portfolio all the light">
+			</a>
+			<h3><a href="exercises/intro-bootstrap-menu-footer.html">Bootstrap Menu and Footer</a></h3>
+			<p>Use and customise Bootstrap-based desktop/laptop and mobile menus, and footer elements.</p>
+			<a class="btn-solid btn-rounded" href="exercises/intro-bootstrap-menu-footer.html">View Tutorial<i class="fas fa-arrow-rigg:ht"></i></a>
+		</div>
 
 	</div><!--- /flex-grid -->
 
