--- a/it4women/exercises/hero-blocks-three.html
+++ b/it4women/exercises/hero-blocks-three.html
@@ -93,7 +93,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>Not all users enjoy fast Internet connection speeds, however. So it is good practice to include a background image that displays until the video finishes downloading.</p>
 
+	<p>Here ae some sources of free background videos:</p>
 
+
+	<ul>
+		<li><a href="https://www.pexels.com/search/videos/background/" target="_blank">Pexels</a></li>
+		<li><a href="https://www.videezy.com/free-video/background" target="_blank">Videezy</a></li>
+		<li><a href="https://pixabay.com/videos/" target="_blank">Pixabay</a></li>
+		<li><a href="https://mixkit.co/free-video-backgrounds/" target="_blank">Mixkit</a></li>
+		<li><a href="https://coverr.co/" target="_blank">Coverr</a></li>
+		<li><a href="https://www.videvo.net/stock-video-footage/background/" target="_blank">Videvo</a></li>
+	</ul>
 
 </section>
 
