--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -50,11 +50,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</ul>
 
 
-	<p>You can view a finished version of the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
+	<p>You can view the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
 
 	<div class="four-samples">
 		<div>
-			<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-privacy/final-form.png" alt="Sample image"></a>
+			<a href="final-bootstrap-form/bootstrap-form.html" target="_blank"><img src="assets/img/intro-bootstrap-form//final-form.png" alt="Sample image"></a>
 			<a href="final-bootstrap-form/bootstrap-form.html" class="link-exercise"  target="_blank">bootstrap-form.html</a>
 		</div>
 	</div>
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>About HTML forms and GitHub</h2>
 	<p>What are called <i>forms</i> in HTML enable users to submit information to websites for processing. A typical example of a form is shown below.</p>
 
-	<img src="assets/img/intro-bootstrap-privacy/contact-sample-form.png" alt="Project Contact">
+	<img src="assets/img/intro-bootstrap-form//contact-sample-form.png" alt="Project Contact">
 	
 	<p>It includes three entry areas or <i>form fields</i> into which a user can input information: <b>Your Name</b>, <b>Your Email</b> and <b>Your Message</b>. At the bottom of the form is a <i>submit</i> button named <b>Send</b>. When clicked or tapped, this button submits the information entered in the form fields to the website.</p>
 	
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section id="sample-files" class="wrapper-content bg-white">
 
 	<h2>Downloading your sample files</h2>
-	<p>In this exercise, you will work with the following web page and a stylesheet:</p>
+	<p>In this exercise, you will work with the following web page and stylesheet:</p>
 	
 	<ul>
 		<li><b><a href="final-bootstrap-form/bootstrap-form.html" target="_blank">bootstrap-form.html</a></b>: Click this link to open the web page in a new tab of your web browser.
@@ -108,11 +108,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>bootstrap-form.html</b>
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to <b>Webpage, HTML only (*.HTML, *.htm)</b>.
-		<img src="assets/img/intro-bootstrap-privacy/file-save-as-html.png" alt="Working with Internal Hyperlinks">
+		<img src="assets/img/intro-bootstrap-form//file-save-as-html.png" alt="Working with Internal Hyperlinks">
 		You can close the browser tab containing the <b>bootstrap-form.html</b> web page.
 		<span class="inside-ol">&nbsp;</span>
 		Your <b>websites/bootstrap</b> sub-folder shown now look as shown below.
-		<img src="assets/img/intro-bootstrap-privacy/file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
+		<img src="assets/img/intro-bootstrap-form//file-explorer-html.png" alt="Working with Internal Hyperlinks"></li>
 
 		<li><b><a href="final-bootstrap-form/assets/css/bootstrap-form.css" target="_blank">bootstrap-form.css</a></b>: Click this link to open the stylesheet file in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
@@ -121,11 +121,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Save the <b>bootstap-form.css</b> stylesheet file to your <b>websites/bootstrap/assets/css</b> sub-folder.
 		<span class="inside-ol">&nbsp;</span>
 		Ensure the <b>Save as type:</b> dropdown list is set to the correct file type.
-		<img src="assets/img/intro-bootstrap-privacy/file-form-save-as-css.png" alt="Working with Internal Hyperlinks" >
+		<img src="assets/img/intro-bootstrap-form//file-form-save-as-css.png" alt="Working with Internal Hyperlinks" >
 		You can close the browser tab containing the <b>bootstrap-form.css</b> stylesheet.
 		<span class="inside-ol">&nbsp;</span>
 		Your <b>websites/bootstrap/assets/css</b> sub-folder shown now look as shown below.
-		<img src="assets/img/intro-bootstrap-privacy/file-explorer-fomr-css.png" alt="Working with Internal Hyperlinks"></li>
+		<img src="assets/img/intro-bootstrap-form//file-explorer-fomr-css.png" alt="Working with Internal Hyperlinks"></li>
 	</ul>
 
 	<p>You have now saved the two files you need for this exercise.</p>
@@ -146,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<ol>
 		<li>In your web browser, visit the <a href="https://formspree.io" target="_blank">formspree.io</a> website.
-		<img src="assets/img/intro-bootstrap-privacy/formspree-1.png" alt="fa-icons-copy">
+		<img src="assets/img/intro-bootstrap-form//formspree-1.png" alt="fa-icons-copy">
 		At the top-right of the home page, click the <b>Get Started</b> button.</li>
 		<li>On the &#8216;Register for Formspree&#8217; screen now displayed, enter the Email address you want to use with Formspree.
 		<span class="inside-ol">&nbsp;</span>
@@ -169,20 +169,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 
 		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
-		<img src="assets/img/intro-bootstrap-privacy/github-signin.png" alt="github-signin"></li>
+		<img src="assets/img/intro-bootstrap-form//github-signin.png" alt="github-signin"></li>
 
 		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
 		<span class="inside-ol">&nbsp;</span>
 		<b>username.github.io</b>
 
-		<img src="assets/img/intro-bootstrap-privacy/github-repo-select.png" alt="github-signin"></li>
+		<img src="assets/img/intro-bootstrap-form//github-repo-select.png" alt="github-signin"></li>
 
 		<li>On the next GitHub screen displayed, click the Add file button near the right of the screen and choose <b>Upload files</b> from the dropdown list. 
-		<img src="assets/img/intro-bootstrap-privacy/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+		<img src="assets/img/intro-bootstrap-form//github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
 
 		<li>In File/Windows Explorer, select your <b>bootstrap</b> folder, and drag-and-drop it to your repository on GitHub. 
 		
-		<img src="assets/img/intro-bootstrap-privacy/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+		<img src="assets/img/intro-bootstrap-form//github-upload-drag-drop.png" alt="Introduction to Images"></li>
 
 		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
 
@@ -210,10 +210,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<li>Your form is now passed to the Formspree service and you will be presented with an &#8220;I am not a robot&#8221; test. This is to protect your form against spam.
 		
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-not-robot.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form//contact-form-not-robot.png"  alt="Project Setup"></li>
 		
 		<li>After you have proved you are not a robot, you are next shown a screen similar to the following.
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-activate.png"  alt="Project Setup"><span class="inside-ol">&nbsp;</span>
+		<img src="assets/img/intro-bootstrap-form//contact-form-activate.png"  alt="Project Setup"><span class="inside-ol">&nbsp;</span>
 		
 		This message is only shown the <i>first time</i> a new form is submitted from a particular web address.</li>
 		
@@ -221,16 +221,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<span class="inside-ol">&nbsp;</span>
 		Go to your email account, open the email sent to you by Formspree, and click the <b>Activate Form</b> button.
 
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-sample-activate-email.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form//contact-form-sample-activate-email.png"  alt="Project Setup"></li>
 
 		<li>You will next see a message telling you that your form is now active.
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-activated.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form//contact-form-activated.png"  alt="Project Setup"></li>
 
 		<li>In future, when a user enters their details to the contact form on your website, they will see the following confirmation message after they click/tap the <b>Send</b> button and pass the &#8220;I am not a robot&#8221; test.
 		<span class="inside-ol">&nbsp;</span>
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-confirmation.png"  alt="Project Setup">
+		<img src="assets/img/intro-bootstrap-form//contact-form-confirmation.png"  alt="Project Setup">
 		Formspree will immediately forward the submitted information to your email account. See the example below.<span class="inside-ol">&nbsp;</span>
-		<img src="assets/img/intro-bootstrap-privacy/contact-form-to-email.png"  alt="Project Setup"></li>
+		<img src="assets/img/intro-bootstrap-form//contact-form-to-email.png"  alt="Project Setup"></li>
 	
 	</ol>
 
