--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -138,7 +138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <section id="formspree-forms" class="wrapper-content">
-	<h2>Viewing your sample privacy page</h2>
+	<h2>Registering with Formspree</h2>
 
 	<p>For your website to use Formspree, you first need to register with this free online service and receive a unique code for adding to your HTML form.</p>
 
